--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="C:/Users/GoldenAge/Documents/GitHub/binaries/mmu.exe"
+export_path="../binaries/mmu.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -20,13 +20,23 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
+binary_format/embed_pck=true
 custom_template/release=""
 custom_template/debug=""
+codesign/enable=false
+codesign/identity_type=0
+codesign/identity=""
+codesign/password=""
+codesign/timestamp=true
+codesign/timestamp_server_url=""
+codesign/digest_algorithm=1
+codesign/description=""
+codesign/custom_options=PoolStringArray(  )
 application/icon=""
 application/file_version="0.0.0.2"
 application/product_version=""
 application/company_name="Syntax Partnership"
-application/product_name="Mega Man Chronicles"
+application/product_name="Mega Man Uprising"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
@@ -48,9 +58,13 @@ script_encryption_key=""
 [preset.1.options]
 
 graphics/32_bits_framebuffer=true
+xr_features/xr_mode=0
+xr_features/degrees_of_freedom=0
+xr_features/hand_tracking=0
 one_click_deploy/clear_previous_install=true
-custom_package/debug=""
-custom_package/release=""
+custom_template/debug=""
+custom_template/release=""
+custom_template/use_custom_build=false
 command_line/extra_args=""
 version/code=1
 version/name="1.0"
@@ -64,11 +78,9 @@ screen/support_normal=true
 screen/support_large=true
 screen/support_xlarge=true
 screen/opengl_debug=false
-launcher_icons/xxxhdpi_192x192=""
-launcher_icons/xxhdpi_144x144=""
-launcher_icons/xhdpi_96x96=""
-launcher_icons/hdpi_72x72=""
-launcher_icons/mdpi_48x48=""
+launcher_icons/main_192x192=""
+launcher_icons/adaptive_foreground_432x432=""
+launcher_icons/adaptive_background_432x432=""
 keystore/debug=""
 keystore/debug_user=""
 keystore/debug_password=""
@@ -251,5 +263,6 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
+binary_format/embed_pck=false
 custom_template/release=""
 custom_template/debug=""
