--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../mmu.exe"
+export_path="../binaries/mmu.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -33,7 +33,7 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/icon=""
-application/file_version="0.0.0.3"
+application/file_version="0.0.0.4"
 application/product_version=""
 application/company_name="Syntax Partnership"
 application/product_name="Mega Man Uprising"
