--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -43,7 +43,7 @@ application/trademarks=""
 
 [preset.1]
 
-name="Android"
+name="Mega Man Uprising"
 platform="Android"
 runnable=true
 custom_features=""
